<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_nav_dashboard"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/clientsFragment"
        android:icon="@drawable/ic_nav_clients"
        android:title="@string/nav_clients" />
    <item
        android:id="@+id/projectsFragment"
        android:icon="@drawable/ic_nav_projects"
        android:title="@string/nav_projects" />
    <item
        android:id="@+id/invoicesFragment"
        android:icon="@drawable/ic_nav_finances"
        android:title="@string/nav_finances" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
